[package]
name = "hello_cargo"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
notify-rust = "^3"
winconsole = "^0.8"
beep = "^0.3"
rodio = "^0.14"
ref_thread_local = "0.1"

[dev-dependencies]
temp_testdir = "0.2"